# os_lab2

./: CMakeLists.txt
src/: MultithreadExecutor.h  Worker.cpp  Worker.h  main.cpp
tests/: TestMultithreadedExecutor.h
